Fix vertical align of h1

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,15 +17,10 @@ header {
     text-align: center;
     padding: 20px 0px;
     box-shadow: 0 3px 5px gray;
-
 }
 
 header a {
     font-size: 1.5em;
-}
-
-h1 {
-    margin: 0;
 }
 
 img {
